# sen0251_server

./: .gitignore  .gitmodules  CMakeLists.txt
include/: listner.h  listners.h  server.h
package/: PKGBUILD  sen0251_service@.service
src/: listner.cpp  listners.cpp  main.cpp  server.cpp
tests/: client.py
